syntax = "proto3";

option go_package = "./proto";

package proto;

service DBSyncer {
  rpc AdvertiseHead (AdvertiseHeadRequest) returns (AdvertiseHeadResponse) {}
  rpc RequestHead (RequestHeadRequest) returns (RequestHeadResponse) {}
}

message AdvertiseHeadRequest {
  string head = 1;
}
message AdvertiseHeadResponse {}

message RequestHeadRequest {}
message RequestHeadResponse {
  string head = 1;
}
